# SuperSecretChat

./: CMakeLists.txt  application.Manifest
App/: ClientWindow.cpp  ClientWindow.h  main.cpp
Networking/: Socket.cpp  Socket.h
Secretest/Networking/: Socket.cpp  Socket.h
Secretest/Utility/: Math.h  mat4.h  vec2.h  vec4.h
Secretest/Windowing/: Threading.h  Window.cpp  Window.h
Server/: ServerWindow.cpp  ServerWindow.h  main.cpp
Utility/: Enum.h  mat3.h  vec3.h
Windowing/: Window.cpp  Window.h
